[metadata]
name = datahive
version = 0.0.1
description = 数据处理工具.
author = lkkings
author_email = lkkings888@gmail.com


[options]
packages = find:
python_requires = >=3.8
install_requires =
    rich
    click
    loguru
    aiofiles
    asyncio_pool
    aiopath
    rarfile
    pynput


[options.entry_points]
console_scripts =
    dh = datahive.cli.cli_commands:main